--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "local:migrate": "knex migrate:latest",
-    "migrate": "docker-compose up migrate",
+    "local:migrate-test": "NODE_ENVIRONMENT='test' knex migrate:latest",
+    "migrate": "docker-compose run migrate",
+    "migrate-test": "docker-compose run migrate npm run local:migrate-test",
     "make": "knex migrate:make",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,11 +20,14 @@
   "author": "Egor Koldasov",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "knex": "^0.95.10",
     "pg": "^8.7.1",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/node": "^16.11.6"
   }
 }
