move in database creation

--- a/dev.env
+++ b/dev.env
@@ -1,1 +1,4 @@
-DATABASE_URL = 'postgres://admin:devpassword@postgres:5432/dev_overview?sslmode=disable'
+DB_HOST = 'postgres'
+DB_USER = 'admin'
+DB_PASSWORD = 'devpassword'
+DB_NAME = 'tool_starter'
