--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "local:migrate": "knex migrate:latest",
     "local:migrate-test": "NODE_ENVIRONMENT='test' knex migrate:latest",
-    "migrate": "docker-compose run migrate",
+    "migrate": "docker-compose run --rm migrate",
     "migrate-test": "docker-compose run migrate npm run local:migrate-test",
     "make": "knex migrate:make",
     "test": "echo \"Error: no test specified\" && exit 1"
